# ScrapMechanic-challenge-extractor

./: CMakeLists.txt  README.md
libs/raylib/: CMakeLists.txt
libs/raylib/src/: config.h  core.c  raylib.h
src/: main.cpp  main.h  messageBox.cpp  messageBox.h  registry.cpp  registry.hpp  winMain.cpp
